--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
 <ul>
     <li><a href="https://github.com/davel/">On GitHub</a></li>
     <li><a href="https://metacpan.org/author/DLAMBLEY">Perl CPAN modules</a></li>
-    <li>Other software
-        <ul>
-            <li><a href="https://repo.or.cz/riscose.git">riscose</a></li>
-            <li><a href="https://repo.or.cz/perl-App-RetroPAN.git">App::RetroPAN</a></li>
-        </ul>
-    </li>
 </ul>
 
-<br />
-<a href="https://www.linkedin.com/in/dave-lambley-992a263/">LinkedIn</a>
+<ul>
+    <li><a href="https://repo.or.cz/riscose.git">riscose</a></li>
+    <li><a href="https://repo.or.cz/perl-App-RetroPAN.git">App::RetroPAN</a></li>
+    <li><a href="https://demozoo.org/productions/205251/">Noise Scroller</a></li>
+</ul>
+
+<ul>
+    <li><a href="https://www.linkedin.com/in/dave-lambley-992a263/">LinkedIn</a></li>
+    <li><a href="https://twitter.com/rbb8racer">Red Bull racer</a></li>
+</ul>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
