--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <ul>
     <li><a href="https://www.linkedin.com/in/dave-lambley-992a263/">LinkedIn</a></li>
-    <li><a href="https://twitter.com/rbb8racer">Red Bull racer</a></li>
+    <li><a href="https://twitter.com/rbb8racer">Red Bull racer</a> (<a href="https://www.youtube.com/channel/UC9eU8GbNlnDAgsSA6rzImSA/videos">videos</a>)</li>
 </ul>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
