--- a/index.html
+++ b/index.html
@@ -27,11 +27,24 @@
     <li><a href="https://metacpan.org/author/DLAMBLEY">Perl CPAN modules</a></li>
 </ul>
 
+<h2>&hellip; and elsewhere</h2>
+
 <ul>
     <li><a href="https://repo.or.cz/riscose.git">riscose</a></li>
     <li><a href="https://repo.or.cz/perl-App-RetroPAN.git">App::RetroPAN</a></li>
     <li><a href="https://demozoo.org/productions/205251/">Noise Scroller</a></li>
 </ul>
+
+<h1>Talks</h1>
+<ul>
+    <li><a href="https://skillsmatter.com/skillscasts/5934-talk-by-dave-lambley">Skills Matter 2014; Chef deployment</a></li>
+    <li><a href="https://www.youtube.com/watch?v=nDOuKbtMVhw">London.pm 2016; Perl, Geodata and Mapping</a></li>
+    <li><a href="https://www.youtube.com/watch?v=sxBPzMk4tt0">London.pm 2017; Software necromancy with Perl and SDL</a></li>
+    <li><a href="https://archive.fosdem.org/2018/schedule/event/software_necromancy/">FOSDEM 2018; Software Necromancy with Perl</a></li>
+
+</ul>
+
+<h1>&hellip; and also</h1>
 
 <ul>
     <li><a href="https://www.linkedin.com/in/dave-lambley-992a263/">LinkedIn</a></li>
