Better video links

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <ul>
     <li><a href="https://www.linkedin.com/in/dave-lambley-992a263/">LinkedIn</a></li>
-    <li><a href="https://twitter.com/rbb8racer">Red Bull racer</a> (<a href="https://www.youtube.com/channel/UC9eU8GbNlnDAgsSA6rzImSA/videos">videos</a>)</li>
+    <li><a href="https://twitter.com/rbb8racer">Red Bull racer</a> (<a href="https://www.youtube.com/watch?v=jGQvZRR2bwE&t=100">2015</a>, <a href="https://www.youtube.com/watch?v=QDjQ6IUo-Zg">2017</a>)</li>
 </ul>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
