Show Noise Scroller capture.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en_GB">
 <!-- vim:ts=4:shiftwidth=4:expandtab
 -->
 <head>
@@ -32,7 +32,7 @@
 <ul>
     <li><a href="https://repo.or.cz/riscose.git">riscose</a></li>
     <li><a href="https://repo.or.cz/perl-App-RetroPAN.git">App::RetroPAN</a></li>
-    <li><a href="https://demozoo.org/productions/205251/">Noise Scroller</a></li>
+    <li><a href="NoiseScroller/">Noise Scroller</a></li>
 </ul>
 
 <h1>Talks</h1>
