Correct Opengraph data

--- a/NoiseScroller/index.html
+++ b/NoiseScroller/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="https://noisescroller-assets.davel.me.uk/poster.jpg" />
     <meta property="og:type" content="video.other" />
     <meta property="og:locale" content="en_GB" />
-    <meta property="og:video" content="https://noisescroller-assets.davel.me.uk/noisescroller.mp4" />
+    <meta property="og:video" content="https://noisescroller-assets.davel.me.uk/noisescroller_h264.mp4" />
     <meta property="og:video:secure_url" content="https://noisescroller-assets.davel.me.uk/noisescroller_h264.mp4" />
     <meta property="og:video:type" content="video/mp4" />
     <meta property="og:video:width" content="1280" />
