Add canonical URL

--- a/NoiseScroller/index.html
+++ b/NoiseScroller/index.html
@@ -9,6 +9,7 @@
 
     <meta property="og:title" content="Noise Scroller" />
     <meta property="og:description" content="Noise Scroller, an FPGA demo." />
+    <meta property="og:url" content="https://dave.lambley.me.uk/NoiseScroller/" />
     <meta property="og:image" content="https://noisescroller-assets.davel.me.uk/poster.jpg" />
     <meta property="og:type" content="video.other" />
     <meta property="og:locale" content="en_GB" />
