DNS not updating

--- a/LostInLondon/index.html
+++ b/LostInLondon/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="Lost in London" />
     <meta property="og:description" content="Lost in London, GPS data rendering" />
     <meta property="og:url" content="https://dave.lambley.me.uk/LostInLondon/" />
-    <meta property="og:image" content="https://lostinlondon-assets.davel.me.uk/poster.jpg" />
+    <meta property="og:image" content="https://github.com/davel/lostinlondon-assets/raw/master/poster.jpg" />
     <meta property="og:type" content="video.other" />
     <meta property="og:locale" content="en_GB" />
-    <meta property="og:video" content="https://lostinlondon-assets.davel.me.uk/lost-4k-h264.mp4" />
-    <meta property="og:video:secure_url" content="https://lostinlondon-assets.davel.me.uk/lost-4k-h264.mp4" />
+    <meta property="og:video" content="https://github.com/davel/lostinlondon-assets/raw/master/lost-4k-h264.mp4" />
+    <meta property="og:video:secure_url" content="https://github.com/davel/lostinlondon-assets/raw/master/lost-4k-h264.mp4" />
     <meta property="og:video:type" content="video/mp4" />
     <meta property="og:video:width" content="3246" />
     <meta property="og:video:height" content="2160" />
@@ -63,15 +63,15 @@ body {
 <body>
 
 <video muted autoplay loop class="full" poster="poster.jpg">
-<source type="video/mp4"  src="https://lostinlondon-assets.davel.me.uk/lost-4k-h265.mp4"  media="screen and (min-device-width: 1921px)" integrity="sha384-zzVssndyCXjhVwK7kX8OZ9dV1KEBE2/ebYSzPmByFoAn5RfkjKyNF0zevEjPkL4x" />
-<source type="video/webm" src="https://lostinlondon-assets.davel.me.uk/lost-4k-webm.webm" media="screen and (min-device-width: 1921px)" integrity="sha384-cHffy7Ig7oOobcWQw/vZKa7wf/V4vGKa+UY4ZTU3K7XUVpjqbqamhxgPYXtYD/Mb" />
-<source type="video/mp4"  src="https://lostinlondon-assets.davel.me.uk/lost-4k-h264.mp4"  media="screen and (min-device-width: 1921px)" integrity="sha384-+Y7Z9SCMjs4zGphmnchh5cA19SrXA85HM5fz9nNxN7w77wdLMRmz6BNrj6EYkIIS" />
+<source type="video/mp4"  src="https://github.com/davel/lostinlondon-assets/raw/master/lost-4k-h265.mp4"  media="screen and (min-device-width: 1921px)" integrity="sha384-zzVssndyCXjhVwK7kX8OZ9dV1KEBE2/ebYSzPmByFoAn5RfkjKyNF0zevEjPkL4x" />
+<source type="video/webm" src="https://github.com/davel/lostinlondon-assets/raw/master/lost-4k-webm.webm" media="screen and (min-device-width: 1921px)" integrity="sha384-cHffy7Ig7oOobcWQw/vZKa7wf/V4vGKa+UY4ZTU3K7XUVpjqbqamhxgPYXtYD/Mb" />
+<source type="video/mp4"  src="https://github.com/davel/lostinlondon-assets/raw/master/lost-4k-h264.mp4"  media="screen and (min-device-width: 1921px)" integrity="sha384-+Y7Z9SCMjs4zGphmnchh5cA19SrXA85HM5fz9nNxN7w77wdLMRmz6BNrj6EYkIIS" />
 
-<source type="video/webm" src="https://lostinlondon-assets.davel.me.uk/lost-2k-webm.webm" media="screen and (min-device-width: 721px)"  integrity="sha384-Gzyh/4DIuMTHV6ecdZ3UEzQTVZXrVn52uS3YqrYQLVyDP0Indzhg6poWCdrh4jeH" />
-<source type="video/mp4"  src="https://lostinlondon-assets.davel.me.uk/lost-2k-h264.mp4"  media="screen and (min-device-width: 721px)"  integrity="sha384-3Yoi02NyjVIIaMxDH9KrnfPJyaM18vvlemXjvgGYjTSBVJTF1uHQ85Ewt0sTNFYW" />
+<source type="video/webm" src="https://github.com/davel/lostinlondon-assets/raw/master/lost-2k-webm.webm" media="screen and (min-device-width: 721px)"  integrity="sha384-Gzyh/4DIuMTHV6ecdZ3UEzQTVZXrVn52uS3YqrYQLVyDP0Indzhg6poWCdrh4jeH" />
+<source type="video/mp4"  src="https://github.com/davel/lostinlondon-assets/raw/master/lost-2k-h264.mp4"  media="screen and (min-device-width: 721px)"  integrity="sha384-3Yoi02NyjVIIaMxDH9KrnfPJyaM18vvlemXjvgGYjTSBVJTF1uHQ85Ewt0sTNFYW" />
 
-<source type="video/webm" src="https://lostinlondon-assets.davel.me.uk/lost-1k-webm.webm" integrity="sha384-hoT+v+okskzwUj9HjSHp3qRCv1Up8w7SPjKAi/IybQpatjuvad2AQIFjqF5+PLSn" />
-<source type="video/mp4"  src="https://lostinlondon-assets.davel.me.uk/lost-1k-h264.mp4"  integrity="sha384-yH9kUsFrXzNNodqANNhlaMtXnQj66EE6EvnGaoT6n7OtApbv0UAgHydOK736ZOQr" />
+<source type="video/webm" src="https://github.com/davel/lostinlondon-assets/raw/master/lost-1k-webm.webm" integrity="sha384-hoT+v+okskzwUj9HjSHp3qRCv1Up8w7SPjKAi/IybQpatjuvad2AQIFjqF5+PLSn" />
+<source type="video/mp4"  src="https://github.com/davel/lostinlondon-assets/raw/master/lost-1k-h264.mp4"  integrity="sha384-yH9kUsFrXzNNodqANNhlaMtXnQj66EE6EvnGaoT6n7OtApbv0UAgHydOK736ZOQr" />
 
 </video>
 
