--- a/LostInLondon/index.html
+++ b/LostInLondon/index.html
@@ -62,7 +62,7 @@ body {
 
 <body>
 
-<video muted autoplay loop class="full" poster="poster.jpg">
+<video muted autoplay loop class="full" poster="https://github.com/davel/lostinlondon-assets/raw/master/poster.jpg">
 <source type="video/mp4"  src="https://github.com/davel/lostinlondon-assets/raw/master/lost-4k-h265.mp4"  media="screen and (min-device-width: 1921px)" integrity="sha384-zzVssndyCXjhVwK7kX8OZ9dV1KEBE2/ebYSzPmByFoAn5RfkjKyNF0zevEjPkL4x" />
 <source type="video/webm" src="https://github.com/davel/lostinlondon-assets/raw/master/lost-4k-webm.webm" media="screen and (min-device-width: 1921px)" integrity="sha384-cHffy7Ig7oOobcWQw/vZKa7wf/V4vGKa+UY4ZTU3K7XUVpjqbqamhxgPYXtYD/Mb" />
 <source type="video/mp4"  src="https://github.com/davel/lostinlondon-assets/raw/master/lost-4k-h264.mp4"  media="screen and (min-device-width: 1921px)" integrity="sha384-+Y7Z9SCMjs4zGphmnchh5cA19SrXA85HM5fz9nNxN7w77wdLMRmz6BNrj6EYkIIS" />
