--- a/Earlswood/index.html
+++ b/Earlswood/index.html
@@ -65,8 +65,16 @@ body {
 <body>
 
 <video muted autoplay loop class="full" id="vid" poster="https://earlswood-assets.davel.me.uk/earlswood-4k-h264.mp4">
-<source type="video/mp4" src="https://earlswood-assets.davel.me.uk/earlswood-2k-h264.mp4" />
-</video>
+
+<source type="video/mp4" src="https://earlswood-assets.davel.me.uk/earlswood-4k-h265.mp4" media="screen and (min-device-width: 1921px)" integrity="sha384-pTnPpa9e0Pjk98UOQSZivvMn7GNeJQZsL+LDlKxJLWyLb2bahjBwC41VZHCyINPj" />
+<source type="video/mp4" src="https://earlswood-assets.davel.me.uk/earlswood-4k-h264.mp4" media="screen and (min-device-width: 1921px)" integrity="sha384-MSQxqPXDNMa/CLWqsAqJuxVSPLT81XG7heb1DRz6ICZ/xAaCpzwukSpkb2XuqQ2Q" />
+
+<source type="video/mp4" src="https://earlswood-assets.davel.me.uk/earlswood-2k-vp9.mp4"  media="screen and (min-device-width: 721px)" integrity="sha384-soky1huCywzbQc/Cjzv/QhPzTyjaaE/Hk/XDR/eCHBaWL1CAKsRTjLL2yY4VVLAv" />
+<source type="video/mp4" src="https://earlswood-assets.davel.me.uk/earlswood-2k-h264.mp4" media="screen and (min-device-width: 721px)" integrity="sha384-YEZgJmGdmLVF+qQWi9/quJyJdns7LXI9cmyOK+xDqqS4dkVv758c/xZywncu9O7K" />
+
+<source type="video/mp4" src="https://earlswood-assets.davel.me.uk/earlswood-1k-vp9.mp4" integrity="sha384-NuoE16m+08cyT7/OKtkeupjnkn8nAXo1tW6n0X4Mmb8sldZY4hkoGKRl/7ABsKzE" />
+<source type="video/mp4" src="https://earlswood-assets.davel.me.uk/earlswood-1k-h264.mp4" integrity="sha384-+rLx50xZl3Y/GiQpNN7CGCyoiDRIl7bYa/5Dl6xOQ4QLN9YPOCPnG5cKA+o/I8DQ" />
+
 </video>
 
 <div class="caption">
