--- a/Earlswood/index.html
+++ b/Earlswood/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous" />
 
     <meta property="og:title" content="Earlswood" />
-    <meta property="og:description" content="Earlswood, exposure stacking, 1s to 384s" />
+    <meta property="og:description" content="Earlswood, exposure stacking, 1s to 384s." />
     <meta property="og:url" content="https://dave.lambley.me.uk/Earslwood/" />
     <meta property="og:image" content="https://earlswood-assets.davel.me.uk/poster.jpg" />
     <meta property="og:type" content="video.other" />
