--- a/Earlswood/index.html
+++ b/Earlswood/index.html
@@ -64,7 +64,7 @@ body {
 
 <body>
 
-<video muted autoplay loop class="full" id="vid" poster="https://earlswood-assets.davel.me.uk/earlswood-4k-h264.mp4">
+<video muted autoplay loop class="full" id="vid" poster="https://earlswood-assets.davel.me.uk/poster.jpg">
 
 <source type="video/mp4" src="https://earlswood-assets.davel.me.uk/earlswood-4k-h265.mp4" media="screen and (min-device-width: 1921px)" integrity="sha384-pTnPpa9e0Pjk98UOQSZivvMn7GNeJQZsL+LDlKxJLWyLb2bahjBwC41VZHCyINPj" />
 <source type="video/mp4" src="https://earlswood-assets.davel.me.uk/earlswood-4k-h264.mp4" media="screen and (min-device-width: 1921px)" integrity="sha384-MSQxqPXDNMa/CLWqsAqJuxVSPLT81XG7heb1DRz6ICZ/xAaCpzwukSpkb2XuqQ2Q" />
