--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 <ul>
     <li><a href="https://repo.or.cz/riscose.git">riscose</a></li>
     <li><a href="https://repo.or.cz/perl-App-RetroPAN.git">App::RetroPAN</a></li>
-    <li><a href="NoiseScroller/">Noise Scroller</a></li>
 </ul>
 
 <h1>Talks</h1>
@@ -47,6 +46,9 @@
 <h1>&hellip; and also</h1>
 
 <ul>
+    <li><a href="Earlswood/">Earlswood</a></li>
+    <li><a href="LostInLondon/">Lost in London</a></li>
+    <li><a href="NoiseScroller/">Noise Scroller</a></li>
     <li><a href="https://www.linkedin.com/in/dave-lambley-992a263/">LinkedIn</a></li>
     <li><a href="https://twitter.com/rbb8racer">Red Bull racer</a> (<a href="https://www.youtube.com/watch?v=jGQvZRR2bwE&t=100">2015</a>, <a href="https://www.youtube.com/watch?v=QDjQ6IUo-Zg">2017</a>)</li>
 </ul>
