--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <ul>
     <li><a href="https://repo.or.cz/riscose.git">riscose</a></li>
     <li><a href="https://repo.or.cz/perl-App-RetroPAN.git">App::RetroPAN</a></li>
+    <li><a href="https://tinyurl.com/y4hrk7kp">On the Beeb, via Owlet</a></li>
 </ul>
 
 <h1>Talks</h1>
