--- a/Earlswood/index.html
+++ b/Earlswood/index.html
@@ -9,7 +9,7 @@
 
     <meta property="og:title" content="Earlswood" />
     <meta property="og:description" content="Earlswood, exposure stacking, 1s to 384s." />
-    <meta property="og:url" content="https://dave.lambley.me.uk/Earslwood/" />
+    <meta property="og:url" content="https://dave.lambley.me.uk/Earlswood/" />
     <meta property="og:image" content="https://earlswood-assets.davel.me.uk/poster.jpg" />
     <meta property="og:type" content="video.other" />
     <meta property="og:locale" content="en_GB" />
