--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 <ul>
     <li><a href="https://repo.or.cz/riscose.git">riscose</a></li>
     <li><a href="https://repo.or.cz/perl-App-RetroPAN.git">App::RetroPAN</a></li>
-    <li><a href="https://tinyurl.com/y4hrk7kp">On the Beeb, via Owlet</a></li>
+    <li>On the Beeb via Owlet,
+      <a href="https://tinyurl.com/y4hrk7kp">triangles</a> and <a href="https://tinyurl.com/y9b2kqwk">squares</a>.
+    </li>
 </ul>
 
 <h1>Talks</h1>
