Add preview image

--- a/AForest/index.html
+++ b/AForest/index.html
@@ -44,7 +44,7 @@
     <meta property="og:title" content="A Forest" />
     <meta property="og:description" content="Exposure explorer on Redhill Common. 2s to 512s" />
     <meta property="og:url" content="https://dave.lambley.me.uk/AForest/" />
-<!--    <meta property="og:image" content="https://earlswood-assets.davel.me.uk/poster.jpg" /> -->
+    <meta property="og:image" content="https://earlswood-assets.davel.me.uk/poster.jpg" />
     <meta property="og:type" content="video.other" />
     <meta property="og:locale" content="en_GB" />
 
