Not called a Beeb any more?

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <li><a href="https://github.com/users/davel/packages/container/package/openra">ARM OpenRA Docker images</a></li>
     <li><a href="https://repo.or.cz/riscose.git">riscose</a></li>
     <li><a href="https://repo.or.cz/perl-App-RetroPAN.git">App::RetroPAN</a></li>
-    <li>On the Beeb via Owlet,
+    <li>On the BBC Micro via Owlet,
       <a href="https://tinyurl.com/y4hrk7kp">triangles</a> and <a href="https://tinyurl.com/y9b2kqwk">squares</a>.
     </li>
 </ul>
