--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
     <li><a href="https://github.com/users/davel/packages/container/package/openra">ARM OpenRA Docker images</a></li>
     <li><a href="https://repo.or.cz/riscose.git">riscose</a></li>
     <li><a href="https://repo.or.cz/perl-App-RetroPAN.git">App::RetroPAN</a></li>
-    <li>On the BBC Micro via Owlet,
-      <a href="https://tinyurl.com/y4hrk7kp">triangles</a> and <a href="https://tinyurl.com/y9b2kqwk">squares</a>.
-    </li>
 </ul>
 
 <h1>Talks</h1>
@@ -54,6 +51,10 @@
     <li><a href="Earlswood/">Earlswood</a></li>
     <li><a href="LostInLondon/">Lost in London</a></li>
     <li><a href="NoiseScroller/">Noise Scroller</a></li>
+    <li>On the BBC Micro via Owlet,
+      <a href="https://tinyurl.com/y4hrk7kp">triangles</a> and <a href="https://tinyurl.com/y2ppj7pt">squares</a>.
+    </li>
+
     <li><a href="https://www.linkedin.com/in/dave-lambley-992a263/">LinkedIn</a></li>
     <li><a href="https://twitter.com/rbb8racer">Red Bull racer</a> (<a href="https://www.youtube.com/watch?v=jGQvZRR2bwE&t=100">2015</a>, <a href="https://www.youtube.com/watch?v=QDjQ6IUo-Zg">2017</a>)</li>
 </ul>
