Add link to Snapcraft

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <li><a href="https://github.com/users/davel/packages/container/package/openra">ARM OpenRA Docker images</a></li>
     <li><a href="https://repo.or.cz/riscose.git">riscose</a></li>
     <li><a href="https://repo.or.cz/perl-App-RetroPAN.git">App::RetroPAN</a></li>
+    <li><a href="https://snapcraft.io/publisher/davel2">On Snapcraft</a></li>
 </ul>
 
 <h1>Talks</h1>
