German Perl Workshop

--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
 
 <h1>Talks</h1>
 <ul>
-    <li><s><a href="https://skillsmatter.com/skillscasts/5934-talk-by-dave-lambley">Skills Matter 2014; Chef deployment</a></s></li>
-    <li><a href="https://www.youtube.com/watch?v=nDOuKbtMVhw">London.pm 2016; Perl, Geodata and Mapping</a></li>
-    <li><a href="https://www.youtube.com/watch?v=sxBPzMk4tt0">London.pm 2017; Software necromancy with Perl and SDL</a></li>
-    <li><a href="https://archive.fosdem.org/2018/schedule/event/software_necromancy/">FOSDEM 2018; Software Necromancy with Perl</a></li>
+    <li><a href="https://www.youtube.com/watch?v=GMXqkrJRGRA">German Perl Workshop 2025: Cloudy Perl</a></li>
     <li><a href="https://www.youtube.com/watch?v=80ZL3hacZAs&list=PLxNdCz2kBhVlzbVFcjwY6GkQf4zBhvwFn&index=4&t=419s&pp=iAQB">London Perl Workshop 2024; Cloudy Perl, how it looks now</a></li>
+    <li><a href="https://archive.fosdem.org/2018/schedule/event/software_necromancy/">FOSDEM 2018; Software Necromancy with Perl</a></li>
+    <li><a href="https://www.youtube.com/watch?v=sxBPzMk4tt0">London.pm 2017; Software necromancy with Perl and SDL</a></li>
+    <li><a href="https://www.youtube.com/watch?v=nDOuKbtMVhw">London.pm 2016; Perl, Geodata and Mapping</a></li>
+    <li><s><a href="https://skillsmatter.com/skillscasts/5934-talk-by-dave-lambley">Skills Matter 2014; Chef deployment</a></s></li>
 </ul>
 
 <h1>&hellip; and also</h1>
